--- a/src/screens/FireSystemChecklist.html
+++ b/src/screens/FireSystemChecklist.html
@@ -185,27 +185,77 @@
       <div class="item"><h3>4. Foto do Manômetro do Saponificante</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
       <div class="item"><h3>5. Foto da Solenoide Conectada no Saponificante</h3>
         <input type="file" multiple onchange="previewImages(this)"><div class="preview"></div>
-        <div class="options"><button>Teste Sim</button><button>Teste Não</button><button>Funcionando Sim</button><button>Funcionando Não</button></div>
+        <div class="options">
+  <label>Teste?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+<div class="options">
+  <label>Funcionando?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+
       </div>
       <div class="item" id="termostatos"><h3>6. Foto dos Termostatos Instalados na Coifa</h3>
         <input type="file" multiple onchange="previewImages(this)"><div class="preview"></div>
-        <div class="options"><button>Teste Sim</button><button>Teste Não</button><button>Funcionando Sim</button><button>Funcionando Não</button></div>
+       <div class="options">
+  <label>Teste?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+<div class="options">
+  <label>Funcionando?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+
         <button onclick="duplicarItem('termostatos')">+ Adicionar</button>
       </div>
       <div class="item"><h3>7. Foto dos Bicos Difusores</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
       <div class="item"><h3>8. Tipo de Gás da Loja</h3><div class="options"><button>Natural</button><button>GLP</button></div></div>
       <div class="item" id="detector"><h3>9. Foto do Detector de Gás</h3>
         <input type="file" multiple onchange="previewImages(this)"><div class="preview"></div>
-        <div class="options"><button>Teste Sim</button><button>Teste Não</button><button>Funcionando Sim</button><button>Funcionando Não</button></div>
+        <div class="options">
+  <label>Teste?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+<div class="options">
+  <label>Funcionando?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+
         <button onclick="duplicarItem('detector')">+ Adicionar</button>
       </div>
       <div class="item"><h3>10. Foto da Solenoide Conectada</h3>
         <input type="file" multiple onchange="previewImages(this)"><div class="preview"></div>
-        <div class="options"><button>Teste Sim</button><button>Teste Não</button><button>Funcionando Sim</button><button>Funcionando Não</button></div>
+        <div class="options">
+  <label>Teste?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+<div class="options">
+  <label>Funcionando?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+
       </div>
       <div class="item" id="dumper"><h3>11. Foto do Dumper Corta-Fogo</h3>
         <input type="file" multiple onchange="previewImages(this)"><div class="preview"></div>
-        <div class="options"><button>Teste Sim</button><button>Teste Não</button><button>Funcionando Sim</button><button>Funcionando Não</button></div>
+        <div class="options">
+  <label>Teste?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+<div class="options">
+  <label>Funcionando?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+
         <button onclick="duplicarItem('dumper')">+ Adicionar</button>
       </div>
       <div class="item"><h3>12. Foto do Cilindro de CO₂</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
