--- a/src/screens/FireSystemChecklist.html
+++ b/src/screens/FireSystemChecklist.html
@@ -56,23 +56,34 @@
       font-size: 17px;
     }
     .options {
-      display: flex;
-      gap: 10px;
-      margin: 8px 0;
-    }
-    .options button {
-      background-color: #ddd;
-      border: none;
-      padding: 6px 12px;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: all 0.2s;
-    }
-    .options button.selected {
-      background-color: #ff7b00;
-      color: #fff;
-      font-weight: 600;
-    }
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 8px 0;
+}
+
+.options label {
+  font-weight: bold;
+  margin-right: 5px;
+  color: #333;
+}
+
+.options button {
+  background-color: #ddd;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.options button.selected {
+  background-color: #ff7b00;
+  color: #fff;
+  font-weight: 600;
+}
+
     textarea {
       width: 100%;
       border-radius: 5px;
