--- a/src/screens/FireSystemChecklist.html
+++ b/src/screens/FireSystemChecklist.html
@@ -270,7 +270,17 @@
         <button onclick="duplicarItem('dumper')">+ Adicionar</button>
       </div>
       <div class="item"><h3>12. Foto do Cilindro de CO₂</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
-      <div class="item"><h3>13. Foto da Solenoide Conectada no CO₂</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div><div class="options"><button>Teste Sim</button><button>Teste Não</button><button>Funcionando Sim</button><button>Funcionando Não</button></div></div>
+      <div class="item"><h3>13. Foto da Solenoide Conectada no CO₂</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div><div class="options">
+  <label>Teste?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+<div class="options">
+  <label>Funcionando?</label>
+  <button>Sim</button>
+  <button>Não</button>
+</div>
+</div>
       <div class="item"><h3>14. Foto dos Termostatos Reguláveis</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
       <div class="item"><h3>15. Foto da Comunicação pro Módulo do Shopping</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
       <div class="item"><h3>16. Foto do Quadro Elétrico/Disjuntor Contato Seco N/F</h3><input type="file" multiple onchange="previewImages(this)"><div class="preview"></div></div>
