--- a/src/screens/FireSystemChecklist.html
+++ b/src/screens/FireSystemChecklist.html
@@ -310,8 +310,8 @@
     </div>
   </div>
 
-  <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
-  <script src="../js/pdf-template.js"></script>
+<script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
+<script src="../src/js/pdf-template.js?v=10"></script>
 
   <script>
     document.querySelectorAll('.options button').forEach(btn => {
