--- a/src/screens/FireSystemChecklist.html
+++ b/src/screens/FireSystemChecklist.html
@@ -240,7 +240,7 @@
 
         <button onclick="duplicarItem('detector')">+ Adicionar</button>
       </div>
-      <div class="item"><h3>10. Foto da Solenoide Conectada</h3>
+      <div class="item"><h3>10. Foto da Solenoide Conectada no CO2</h3>
         <input type="file" multiple onchange="previewImages(this)"><div class="preview"></div>
         <div class="options">
   <label>Teste?</label>
